deployments/k8s/infrastructure/base/apollo-router/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apollo-router
  labels:
    app: apollo-router
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4000
      targetPort: 4000
      protocol: TCP
  selector:
    app: apollo-router
